--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Agustinus Theodorus",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "express": "^4.15.2",
+    "jquery": "^1.9.1",
+    "popper.js": "^1.14.1",
     "socket.io": "^2.0.4"
   }
 }
