--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple chat app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "author": "Agustinus Theodorus",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "bootstrap": "^4.0.0",
     "express": "^4.15.2",
     "jquery": "^1.9.1",
+    "nodemon": "^1.17.2",
     "popper.js": "^1.14.1",
     "socket.io": "^2.0.4"
   }
