--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
   },
+  "engines": {
+    "node": "6.13.1"
+  },
   "author": "Agustinus Theodorus",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "express": "^4.15.2",
     "jquery": "^1.9.1",
     "nodemon": "^1.17.2",
     "popper.js": "^1.14.1",
     "socket.io": "^2.0.4"
+  },
+  "devDependencies": {
   }
 }
