--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon server.js"
   },
   "engines": {
-    "node": "6.13.1"
+    "node": "6.13.1",
+    "npm": "3.10.10"
   },
   "author": "Agustinus Theodorus",
   "license": "ISC",
