--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "datatables.net": "1.10.16",
     "datatables.net-dt": "1.10.16",
     "express": "^4.15.2",
+    "heroku": "7.0.45",
     "jquery": "^1.9.1",
     "nodemon": "^1.17.2",
     "popper.js": "^1.14.1",
